# db-mcp

./: .env.demo  .env.demo-mysql  .env.demo-sqlserver  .env.example  .gitattributes  .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  SETUP.md  config.example.yaml  docker-compose.yml  pyproject.toml  worklog.md
.claude/skills/setup-db-mcp/: SKILL.md
.claude/skills/setup-pg-readonly-mcp/: SKILL.md
.github/workflows/: ci.yml
demo/: README.md
demo/init/: 01-schema.sql  02-seed.sql  03-mcp-ro.sql
demo/init-mysql/: 01-schema.sql  02-seed.sql  03-mcp-ro.sql
demo/init-sqlserver/: 01-schema.sql  02-seed.sql  03-mcp-ro.sql  entrypoint.sh
deployments/: README.md  _template.md
docs/: 00-para-leigos.md  01-instalacao.md  02-preparar-o-banco.md  03-arquitetura.md  04-troubleshooting.md  DESIGN.md  VISAO-GERAL.md
docs/superpowers/plans/: 2026-07-16-db-mcp-fase-0-multi-dialeto.md  2026-07-20-db-mcp-fase-1-mysql.md  2026-07-21-db-mcp-fase-2-sqlserver.md
docs/superpowers/specs/: 2026-07-16-db-mcp-multi-dialeto-design.md  2026-07-21-db-mcp-fase-2-sqlserver-design.md
src/db_mcp/: cli.py  config.py  db.py  doctor.py  errors.py  server.py
src/db_mcp/dialetos/: __init__.py  base.py  mysql.py  postgres.py  sqlserver.py
src/db_mcp/guardrails/: policy.py  sql.py
src/pg_readonly_mcp/: cli.py  config.py  db.py  doctor.py  observability.py  server.py
src/pg_readonly_mcp/guardrails/: ratelimit.py  sql.py
tests/: test_ataques_e2e.py  test_cli.py  test_config.py  test_db_integration.py  test_dialetos.py  test_doctor.py  test_doctor_integration.py  test_e2e_integration.py  test_errors.py  test_observability.py  test_policy.py  test_ratelimit.py  test_server.py  test_sql.py  test_sql_mysql.py  test_sql_sqlserver.py
